# ocs4dev

./: .gitignore  README.md  app.py  build_index.py  env_example.txt  ocs4dev.py  pyproject.toml  requirements.txt  update_gh.py
faiss_index/: index.faiss  index.pkl
knowledge_base/mtn_momo/: mtn_momo_api_brand_guidelines.md  mtn_momo_api_callback_docs.md  mtn_momo_api_error_codes.md  mtn_momo_api_faq.md  mtn_momo_api_getting_started.md  mtn_momo_api_intro.md  mtn_momo_api_sandbox_use_cases.md  mtn_momo_api_use_cases.md  mtn_momo_api_user_and_key_management.md  mtn_momo_error_codes.md  mtn_momo_open_apis_ sandbox_documentation.md
knowledge_base/pesapal/: pesapal_integration_guide.md
knowledge_base/pesapal/pesapal_e-commerce-api-3.0/: pesapal_e-commerce_api_3.0_auth_docs.md  pesapal_e-commerce_api_3.0_e-commerce_intro.md  pesapal_e-commerce_api_3.0_get_ipn_docs.md  pesapal_e-commerce_api_3.0_get_transaction_status_docs.md  pesapal_e-commerce_api_3.0_ipn_docs.md  pesapal_e-commerce_api_3.0_order_cancellation_api_docs.md  pesapal_e-commerce_api_3.0_recurring_payments_docs.md  pesapal_e-commerce_api_3.0_refund_api_docs.md  pesapal_e-commerce_api_3.0_submit_order_docs.md
knowledge_base/pesapal/pesapal_plugins/: pesapal_plugin_installation_guides.md
knowledge_base/pesapal/pesapal_pos_api/: pesapal_pos_api_intro.md  pesapal_wired_pos_api.md  pesapal_wireless_pos_api.md
knowledge_base/sentezo/: sentezo_wallet_api_docs.md
